--- a/app.json
+++ b/app.json
@@ -24,6 +24,18 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9eee09da-4084-4f10-9d4c-c8dd7955e413"
+      }
+    },
+    "owner": "fleetman",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/9eee09da-4084-4f10-9d4c-c8dd7955e413"
     }
   }
 }
