--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "TestApp",
-    "slug": "TestApp",
+    "name": "Fleetman",
+    "slug": "Fleetman",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,10 +16,11 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.fleetman.Fleetman",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
+            },
       "edgeToEdgeEnabled": true
     },
     "web": {
