--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "expo": "~53.0.7",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "^0.28.13",
+    "firebase": "^11.8.1",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "expo-updates": "~0.28.12"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
