--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "expo": "~53.0.7",
+    "@react-navigation/bottom-tabs": "^7.3.14",
+    "@react-navigation/native": "^7.1.10",
+    "expo": "53.0.11",
     "expo-status-bar": "~2.2.3",
-    "expo-updates": "^0.28.13",
+    "expo-updates": "~0.28.14",
     "firebase": "^11.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
