--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-navigation/bottom-tabs": "^7.3.14",
-    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/bottom-tabs": "^7.4.1",
+    "@react-navigation/native": "^7.1.14",
     "expo": "53.0.11",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.14",
@@ -19,7 +19,9 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
